test: PostServiceIntegrationTest 작성.