@@ -1,82 +1,64 @@
 package com.hotnerds.post.application;
 
+import com.hotnerds.IntegrationTest;
 import com.hotnerds.common.exception.BusinessException;
 import com.hotnerds.common.exception.ErrorCode;
+import com.hotnerds.common.security.oauth2.service.AuthProvider;
 import com.hotnerds.common.security.oauth2.service.AuthenticatedUser;
 import com.hotnerds.post.domain.Post;
 import com.hotnerds.post.domain.dto.*;
-import com.hotnerds.post.domain.like.Like;
-import com.hotnerds.post.domain.like.Likes;
 import com.hotnerds.post.domain.repository.PostRepository;
-import com.hotnerds.tag.application.TagService;
 import com.hotnerds.tag.domain.Tag;
+import com.hotnerds.tag.domain.repository.TagRepository;
+import com.hotnerds.user.domain.ROLE;
 import com.hotnerds.user.domain.User;
 import com.hotnerds.user.domain.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
-@ExtendWith(MockitoExtension.class)
-public class PostServiceTest {
+public class PostServiceIntegrationTest extends IntegrationTest {
 
-    @Mock
+    @Autowired
     PostRepository postRepository;
 
-    @Mock
+    @Autowired
     UserRepository userRepository;
 
-    @Mock
-    TagService tagService;
-
-    @InjectMocks
+    @Autowired
     PostService postService;
+
+    @Autowired
+    TagRepository tagRepository;
 
     User user;
 
-    AuthenticatedUser authUser;
-
     Post post;
-
-    Likes likes;
 
     Tag tag;
 
+    AuthenticatedUser authUser;
+
     @BeforeEach
     void init() {
-        likes = new Likes(new ArrayList<>());
-
-        user = User.builder()
-                .username("name")
-                .email("email")
-                .build();
-
+        user = new User("garamkim", "kgr4163@korea.ac.kr", ROLE.USER, AuthProvider.KAKAO);
+        post = new Post("title", "content", user);
+        tag = new Tag("tagName");
         authUser = AuthenticatedUser.of(user);
 
-        post = new Post(1L,"title", "content", user);
-
-        tag = new Tag("tagName");
     }
 
-    @DisplayName("게시글 등록")
+    @DisplayName("유저는 게시글을 등록할 수 있다.")
     @Test
     void 게시글_등록_성공() {
         //given
@@ -86,31 +68,24 @@ public class PostServiceTest {
                 .tagNames(List.of(tag.getName()))
                 .build();
 
-        when(postRepository.save(any(Post.class))).thenReturn(post);
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(tagService.findOrCreateTag(anyString())).thenReturn(tag);
+        userRepository.save(user);
 
         //when
         Long postId = postService.write(requestDto, authUser);
 
         //then
         assertThat(postId).isNotNull();
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).save(any());
-        verify(tagService, times(requestDto.getTagNames().size())).findOrCreateTag(any());
     }
 
-    @DisplayName("유효하지 않은 사용자는 게시물을 등록할 수 없다.")
+    @DisplayName("존재하지 않는 사용자는 게시글을 작성할 수 없다.")
     @Test
-    void 유효하지않은사용자_게시글_생성_실패() {
+    void 존재하지_않은_사용자_게시글_작성_실패() {
         //given
         PostRequestDto requestDto = PostRequestDto.builder()
                 .title(post.getTitle())
                 .content(post.getContent())
                 .tagNames(List.of(tag.getName()))
                 .build();
-
-        when(userRepository.findByUsername(anyString())).thenThrow(new BusinessException(ErrorCode.USER_NOT_FOUND_EXCEPTION));
 
         //when then
         assertThatThrownBy(() -> postService.write(requestDto, authUser))
@@ -118,14 +93,12 @@ public class PostServiceTest {
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.USER_NOT_FOUND_EXCEPTION);
-        verify(userRepository, times(1)).findByUsername(any());
     }
 
-
-    @DisplayName("유효하지 않은 태그 이름을 갖는 게시물은 생성할 수 없다.")
-    @ValueSource(strings = {"", "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa", " "})
+    @DisplayName("유저는 유효하지 않는 태그 이름을 갖는 게시물을 생성할 수 없다.")
+    @ValueSource(strings = {"", "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa", " "})
     @ParameterizedTest
-    public void 유효하지않는_태그를_갖는_게시글_생성_실패(String tagName) {
+    void 유효하지않는_태그를_갖는_게시글_생성_실패(String tagName) {
         //given
         PostRequestDto requestDto = PostRequestDto.builder()
                 .title(post.getTitle())
@@ -133,8 +106,7 @@ public class PostServiceTest {
                 .tagNames(List.of(tagName))
                 .build();
 
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(tagService.findOrCreateTag(anyString())).thenThrow(new BusinessException(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION));
+        userRepository.save(user);
 
         //when then
         assertThatThrownBy(() -> postService.write(requestDto, authUser))
@@ -142,23 +114,19 @@ public class PostServiceTest {
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION);
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(tagService, times(1)).findOrCreateTag(any());
     }
 
-    @DisplayName("중복된 태그를 가진 게시물은 생성할 수 없다.")
+    @DisplayName("유저는 중복된 태그를 가진 게시물을 생성할 수 없다.")
     @Test
-    public void 중복된_태그를_가진_게시물_생성_실패() {
+    void 중복된_태그를_가진_게시글_생성_실패() {
         //given
         PostRequestDto requestDto = PostRequestDto.builder()
                 .title(post.getTitle())
                 .content(post.getContent())
-                .tagNames(Arrays.asList(tag.getName(), tag.getName()))
+                .tagNames(List.of("tagName", "tagName"))
                 .build();
 
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(tagService.findOrCreateTag(anyString())).thenReturn(tag);
+        userRepository.save(user);
 
         //when then
         assertThatThrownBy(() -> postService.write(requestDto, authUser))
@@ -166,45 +134,43 @@ public class PostServiceTest {
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.DUPLICATED_TAG_EXCEPTION);
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(tagService, times(requestDto.getTagNames().size())).findOrCreateTag(any());
     }
 
-    @DisplayName("전체 게시글 조회")
+    @DisplayName("유저는 전체 게시글을 조회할 수 있다.")
     @Test
-    void 전체_게시글_조회() {
+    void 전체_게시글_조회_성공() {
         //given
-        when(postRepository.findAllPosts(any())).thenReturn(List.of(post));
-        Pageable pageable = PageRequest.of(0, 10);
-        //when
-        List<PostResponseDto> posts = postService.searchAll(pageable);
-
-        //then
-        assertThat(posts).hasSize(1);
-        verify(postRepository, times(1)).findAllPosts(any());
-    }
-
-    @DisplayName("게시글 Id로 조회 성공")
-    @Test
-    void 게시글_Id로_조회_성공() {
-        //given
-        when(postRepository.findById(any())).thenReturn(Optional.of(post));
+        PageRequest pageable = PageRequest.of(0, 10);
+        userRepository.save(user);
+        postRepository.save(post);
 
         //when
-        PostResponseDto postResponseDto = postService.searchByPostId(post.getId());
+        List<PostResponseDto> findPosts = postService.searchAll(pageable);
 
         //then
-        assertThat(postResponseDto.getPostId()).isEqualTo(post.getId());
-
-        verify(postRepository, times(1)).findById(any());
+        assertThat(findPosts).hasSize(1);
     }
 
-    @DisplayName("해당하는 Id를 가진 게시글이 없으면 예외 발생")
+    @DisplayName("유저는 게시글을 게시글 ID로 조회할 수 있다.")
+    @Test
+    void 게시글_ID_조회_성공() {
+        //given
+        userRepository.save(user);
+        Post savedPost = postRepository.save(post);
+
+        //when
+        PostResponseDto postResponseDto = postService.searchByPostId(savedPost.getId());
+
+        //then
+        assertThat(postResponseDto.getPostId()).isEqualTo(savedPost.getId());
+    }
+
+    @DisplayName("해당하는 Id를 가진 게시글이 없으면 예외를 발생시킨다")
     @Test
     void 게시글_Id_없으면_예외_발생() {
         //given
-        when(postRepository.findById(any())).thenReturn(Optional.empty());
+        userRepository.save(user);
+        postRepository.save(post);
 
         //when then
         assertThatThrownBy(() -> postService.searchByPostId(2L))
@@ -212,102 +178,84 @@ public class PostServiceTest {
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.POST_NOT_FOUND_EXCEPTION);
-
-        verify(postRepository, times(1)).findById(any());
     }
 
-    @DisplayName("게시글 제목으로 조회")
+    @DisplayName("유저는 게시글을 제목으로 조회할 수 있다.")
     @Test
     void 게시글_제목으로_조회() {
         //given
-        when(postRepository.findAllByTitle(any(), any())).thenReturn(List.of(post));
+        userRepository.save(user);
+        Post savedPost = postRepository.save(post);
         PostByTitleRequestDto requestDto = PostByTitleRequestDto.builder()
-                .title(post.getTitle())
+                .title(savedPost.getTitle())
                 .pageable(PageRequest.of(0 ,10))
                 .build();
         //when
         List<PostResponseDto> findPosts = postService.searchByTitle(requestDto);
 
         //then
-        assertThat(findPosts.size()).isEqualTo(1);
-
-        verify(postRepository, times(1)).findAllByTitle(any(), any());
+        assertThat(findPosts).hasSize(1);
     }
 
-    @DisplayName("존재하지 않은 사용자 게시물 조회 실패")
+    @DisplayName("존재하지 않은 사용자 게시물을 조회할 수 없다.")
     @Test
     void 존재하지_않은_사용자_게시물_조회_실패() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
         PostByWriterRequestDto requestDto = PostByWriterRequestDto.builder()
                 .writer(user.getUsername())
                 .pageable(PageRequest.of(0, 10))
                 .build();
-
         //when then
-
         assertThatThrownBy(() -> postService.searchByWriter(requestDto))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.USER_NOT_FOUND_EXCEPTION.getMessage());
-        verify(userRepository, times(1)).findByUsername(user.getUsername());
     }
 
-    @DisplayName("게시글 작성자 이름으로 게시글 조회.")
+    @DisplayName("유저는 게시글을 작성자 이름으로 조회할 수 있다.")
     @Test
     void 작성자_이름으로_게시물_조회() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findAllByWriter(any(User.class), any(PageRequest.class))).thenReturn(List.of(post, post));
+        userRepository.save(user);
+        postRepository.save(post);
 
         PostByWriterRequestDto requestDto = PostByWriterRequestDto.builder()
                 .writer(user.getUsername())
                 .pageable(PageRequest.of(0, 10))
                 .build();
-
-        List<PostResponseDto> expectedResult = List.of(
-                PostResponseDto.of(post),
-                PostResponseDto.of(post)
-        );
 
         //when
         List<PostResponseDto> findResults = postService.searchByWriter(requestDto);
 
         //then
-        assertThat(findResults.size()).isEqualTo(2);
-
-        assertThat(findResults)
-                .usingRecursiveComparison()
-                .isEqualTo(expectedResult);
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findAllByWriter(any(), any());
+        assertThat(findResults).hasSize(1);
     }
 
-    @DisplayName("특정 태그가 붙어 있는 게시글 조회할 수 있다.")
+    @DisplayName("유저는 태그를 이용해서 게시글을 조회할 수 있다.")
     @Test
     void 태그로_게시글_조회() {
         //given
+        userRepository.save(user);
+        tagRepository.save(tag);
+        postRepository.save(post);
         post.addTag(tag);
         PostByTagRequestDto requestDto = PostByTagRequestDto.builder()
                 .tagNames(List.of(tag.getName()))
                 .pageable(PageRequest.of(0, 10))
                 .build();
-
-        when(postRepository.findAllByTagNames(any(), any())).thenReturn(List.of(post));
-
         //when
         List<PostResponseDto> findPosts = postService.searchByTagNames(requestDto);
 
         //then
-        assertThat(findPosts.size()).isEqualTo(1);
-
-        verify(postRepository, times(1)).findAllByTagNames(any(),any());
+        assertThat(findPosts).hasSize(1);
     }
 
     @DisplayName("유효하지 않은 태그 이름으로 게시글 조회 시 예외가 발생한다.")
     @Test
     void 유효하지_않은_태그이름_게시글_조회_실패() {
         //given
+        userRepository.save(user);
+        tagRepository.save(tag);
+        postRepository.save(post);
         post.addTag(tag);
         PostByTagRequestDto requestDto = PostByTagRequestDto.builder()
                 .tagNames(List.of("", "     "))
@@ -322,128 +270,96 @@ public class PostServiceTest {
                 .isEqualTo(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION);
     }
 
-    @DisplayName("유효하지 않은 사용자는 게시글을 삭제할 수 없다.")
+    @DisplayName("존재하지 않은 사용자는 게시글을 삭제할 수 없다.")
     @Test
     void 유효하지않은사용자_게시글_삭제_실패() {
-        //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
-
-        //when then
         assertThatThrownBy(() -> postService.delete(1L, authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.USER_NOT_FOUND_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-
     }
 
-    @DisplayName("존재하지 않은 게시글 삭제 실패")
+    @DisplayName("유저는 존재하지 않은 게시글을 삭제 할 수 없다.")
     @Test
     void 존재하지않은_게시글_삭제_실패() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.empty());
-
+        userRepository.save(user);
+        Long postId = 1L;
         //when then
-        assertThatThrownBy(() -> postService.delete(1L, authUser))
+        assertThatThrownBy(() -> postService.delete(postId, authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.POST_NOT_FOUND_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
     }
 
     @DisplayName("게시글 작성자와 삭제 요청한 유저가 다르면 삭제 할 수 없다.")
     @Test
     void 게시글_작성자와_요청한_유저가_다르면_삭제_실패() {
-        User otherUser = new User("otherUser", "aaa@aaa");
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(otherUser));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        User otherUser = new User("otherUser", "aaa@aaa", ROLE.USER, AuthProvider.KAKAO);
+        AuthenticatedUser otherAuthenticatedUser = AuthenticatedUser.of(otherUser);
+        userRepository.save(user);
+        userRepository.save(otherUser);
+        postRepository.save(post);
 
         //when then
-        assertThatThrownBy(() -> postService.delete(1L, authUser))
+        assertThatThrownBy(() -> postService.delete(post.getId(), otherAuthenticatedUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.POST_WRITER_NOT_MATCH_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
     }
 
-    @DisplayName("게시글 삭제 성공")
+    @DisplayName("유저는 게시글을 삭제할 수 있다.")
     @Test
     void 게시글_삭제_성공() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        userRepository.save(user);
+        postRepository.save(post);
 
-        //when
-        postService.delete(1L, authUser);
-
-        //then
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
-        verify(postRepository, times(1)).deleteById(any());
+        //when then
+        postService.delete(post.getId(), authUser);
     }
 
     @DisplayName("존재하지 않는 게시글에 좋아요를 누르면 실패 한다.")
     @Test
     void 존재하지않은_게시글_좋아요_실패() {
         //given
-        when(userRepository.findByUsername(any())).thenReturn(Optional.of(user));
-
+        userRepository.save(user);
+        Long postId = 1L;
         //when then
         assertThatThrownBy(
-                () -> postService.like(post.getId(), authUser))
+                () -> postService.like(postId, authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.POST_NOT_FOUND_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
     }
 
     @DisplayName("존재하지 않는 사용자가 게시글에 좋아요를 요청하면 실패한다.")
     @Test
     void 존재하지않는_사용자_좋아요_실패() {
-        //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
-        //when then
         assertThatThrownBy(
                 () -> postService.like(post.getId(), authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.USER_NOT_FOUND_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
     }
 
     @DisplayName("게시글 좋아요 요청이 중복되면 예외를 발생시킨다.")
     @Test
     void 게시글_좋아요_중복() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        userRepository.save(user);
+        post.like(user);
+        postRepository.save(post);
 
-        post.getLikeList().add(Like.builder()
-                .id(null)
-                .user(user)
-                .post(post)
-                .build());
 
         //when then
         assertThatThrownBy(
                 () -> postService.like(post.getId(), authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.DUPLICATED_LIKE_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
     }
 
     @DisplayName("사용자가 게시물에 좋아요를 누를 수 있다.")
     @Test
     void 게시글_좋아요_성공() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        userRepository.save(user);
+        postRepository.save(post);
 
         //when
         LikeResponseDto responseDto = postService.like(post.getId(), authUser);
@@ -454,36 +370,29 @@ public class PostServiceTest {
                 () -> assertThat(responseDto.getWriter()).isEqualTo(user.getUsername()),
                 () -> assertThat(responseDto.getPostId()).isEqualTo(post.getId())
         );
-        verify(userRepository, times(1)).findByUsername(user.getUsername());
-        verify(postRepository, times(1)).findById(post.getId());
     }
 
     @DisplayName("좋아요를 누르지 않은 게시물에 대해 좋아요를 취소할 수 없다.")
     @Test
     void 좋아요_취소_실패() {
         //given
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        userRepository.save(user);
+        postRepository.save(post);
 
         //when then
         assertThatThrownBy(
                 () -> postService.unlike(post.getId(), authUser))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.LIKE_NOT_FOUND_EXCEPTION.getMessage());
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(any());
     }
 
-    @DisplayName("좋아요 취소 성공")
+    @DisplayName("유저는 좋아요를 취소할 수 있다.")
     @Test
     void 게시글_좋아요_취소_성공() {
         //given
+        userRepository.save(user);
         post.like(user);
-
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-
+        postRepository.save(post);
 
         //when
         LikeResponseDto responseDto = postService.unlike(post.getId(), authUser);
@@ -494,15 +403,17 @@ public class PostServiceTest {
                 () -> assertThat(responseDto.getWriter()).isEqualTo(user.getUsername()),
                 () -> assertThat(responseDto.getPostId()).isEqualTo(post.getId())
         );
-
-        verify(postRepository, times(1)).findById(post.getId());
-        verify(userRepository, times(1)).findByUsername(user.getUsername());
     }
 
-    @DisplayName("게시글 수정 성공")
+    @DisplayName("유저는 게시글을 수정할 수 있다.")
     @Test
     void 게시글_수정_성공() {
         //given
+        userRepository.save(user);
+        tagRepository.save(tag);
+        post.addTag(tag);
+        postRepository.save(post);
+
         PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
                 .postId(post.getId())
                 .title(post.getTitle())
@@ -510,27 +421,22 @@ public class PostServiceTest {
                 .tagNames(List.of(tag.getName()))
                 .build();
 
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(tagService.findOrCreateTag(anyString())).thenReturn(tag);
-
         //when
         postService.update(updateDto, authUser);
-
-        //then
-        verify(postRepository, times(1)).findById(anyLong());
-        verify(userRepository, times(1)).findByUsername(anyString());
-        verify(tagService, times(updateDto.getTagNames().size())).findOrCreateTag(anyString());
     }
 
     @DisplayName("게시글 작성자가 아닌 사용자는 게시글 수정할 수 없다.")
     @Test
     public void 작성자가_아닌_사용자_게시글_수정_실패() {
         //given
-        User notWriter = User.builder()
-                .username("garam1234")
-                .email("kgr@naver.com")
-                .build();
+        User otherUser = new User("otherUser", "aaa@aaa", ROLE.USER, AuthProvider.KAKAO);
+        AuthenticatedUser otherAuthenticatedUser = AuthenticatedUser.of(otherUser);
+        userRepository.save(user);
+        userRepository.save(otherUser);
+        tagRepository.save(tag);
+        post.addTag(tag);
+        postRepository.save(post);
+
         PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
                 .postId(post.getId())
                 .title(post.getTitle())
@@ -538,33 +444,27 @@ public class PostServiceTest {
                 .tagNames(List.of(tag.getName()))
                 .build();
 
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(notWriter));
-
         //when then
-        assertThatThrownBy(() -> postService.update(updateDto, authUser))
+        assertThatThrownBy(() -> postService.update(updateDto, otherAuthenticatedUser))
                 .isInstanceOf(BusinessException.class)
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.POST_WRITER_NOT_MATCH_EXCEPTION);
-
-        verify(postRepository, times(1)).findById(anyLong());
-        verify(userRepository, times(1)).findByUsername(anyString());
     }
 
     @DisplayName("수정하려는 게시글이 없으면 예외가 발생한다.")
     @Test
     void 수정하려는_게시글이_없을때_예외_발생() {
         //given
+        userRepository.save(user);
+        Long postId = 1L;
+
         PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
-                .postId(post.getId())
+                .postId(postId)
                 .title(post.getTitle())
                 .content(post.getContent())
                 .tagNames(List.of(tag.getName()))
                 .build();
-
-        when(userRepository.findByUsername(any())).thenReturn(Optional.of(user));
-        when(postRepository.findById(anyLong())).thenReturn(Optional.empty());
 
         //when then
         assertThatThrownBy(() -> postService.update(updateDto, authUser))
@@ -572,9 +472,6 @@ public class PostServiceTest {
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.POST_NOT_FOUND_EXCEPTION);
-
-        verify(userRepository, times(1)).findByUsername(any());
-        verify(postRepository, times(1)).findById(anyLong());
     }
 
     @DisplayName("수정하려는 게시글의 사용자가 존재하지 않으면 예외가 발생한다.")
@@ -588,16 +485,12 @@ public class PostServiceTest {
                 .tagNames(List.of(tag.getName()))
                 .build();
 
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
-
         //when then
         assertThatThrownBy(() -> postService.update(updateDto, authUser))
                 .isInstanceOf(BusinessException.class)
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.USER_NOT_FOUND_EXCEPTION);
-
-        verify(userRepository, times(1)).findByUsername(anyString());
     }
 
     @DisplayName("수정하려는 게시글에 태그 이름이 유효하지 않으면 예외가 발생한다.")
@@ -605,6 +498,9 @@ public class PostServiceTest {
     @ParameterizedTest
     void 수정하려는_게시글_유효하지_않은_태그를_갖으면_예외_발생(String tagName) {
         //given
+        userRepository.save(user);
+        postRepository.save(post);
+
         PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
                 .postId(post.getId())
                 .title(post.getTitle())
@@ -612,19 +508,12 @@ public class PostServiceTest {
                 .tagNames(List.of(tagName))
                 .build();
 
-        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
-        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
-        when(tagService.findOrCreateTag(anyString())).thenThrow(new BusinessException(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION));
-
         //when then
         assertThatThrownBy(() -> postService.update(updateDto, authUser))
                 .isInstanceOf(BusinessException.class)
                 .extracting("errorCode")
                 .usingRecursiveComparison()
                 .isEqualTo(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION);
-
-        verify(postRepository, times(1)).findById(anyLong());
-        verify(userRepository, times(1)).findByUsername(anyString());
-        verify(tagService, times(1)).findOrCreateTag(anyString());
     }
 }
+
